--- a/Assignment3_Deep_Learning/Intro to Deep Learning.ipynb
+++ b/Assignment3_Deep_Learning/Intro to Deep Learning.ipynb
@@ -35,16 +35,16 @@
     "## Graphs\n",
     "2.Neural networks are usually represented as graphs. A graph is a data structure that consists of nodes (represented as circles) that are connected by edges (represented as lines).\n",
     "\n",
-    "Image from Ipad\n",
+    "<Img src = \"Images/Graph.jpg\">\n",
     "\n",
     "Graphs are commonly used to represent how components of a system are related or linked. For example, the Facebook Social Graph describes how all of the users on Facebook are connected to each other (and this graph is changing constantly as friends are added and removed). Google Maps uses graphs to represent locations in the physical world as nodes and roads as edges.\n",
     "\n",
-    "Image from Github\n",
+    "<Img src = \"Images/Graph_FB_Google.jpg\">\n",
     "\n",
     "Graphs are a highly flexible data structure; you can even represent a list of values as a graph. Graphs are often categorized by their properties, which act as constraints\n",
     "\n",
     "\n",
-    "Image\n"
+    "<Img src = \"Images/Graph_Type.jpg\">\n"
    ]
   },
   {
@@ -66,11 +66,11 @@
     "\n",
     "y = a1x1 + a2x2\n",
     "\n",
-    "\n",
-    "**Image**\n",
+    "<Img src = \"Images/x1a1_x2a2_y.jpg\">\n",
     "\n",
     "The computational graph is a powerful representation, as it allows us to compactly represent models with many layers of nesting. In fact, a decision tree is really a specific type of computational graph. There's no compact way to express a decision tree model using just equations and standard algebraic notation\n",
-    "\n"
+    "\n",
+    "<Img src = \"Images/DT_Grp.jpg\">\n"
    ]
   },
   {
@@ -98,9 +98,7 @@
     "\n",
     "Xa^T= y\n",
     "\n",
-    "Example:\n",
-    "\n",
-    "\n",
+    "<Img src = \"Images/vector_prod.jpg\">\n",
     "\n",
     "**Neural Network Representation**\n",
     "\n",
@@ -111,26 +109,26 @@
     "\n",
     "The neurons and arrows act as a visual metaphor for the weighted sum, which is how the feature columns and weights are combined.\n",
     "\n",
-    "---------------------Include \n",
+    "<Img src = \"Images/neuron.jpg\">\n",
     "\n",
     "Inspired by biological neural networks, an **activation function** determines if the neuron fires or not. In a neural network model, the activation function transforms the weighted sum of the input values. For this network, the activation function is the identity function. The identity function returns the same value that was passed in:\n",
     "\n",
     "f(x) = x\n",
     "\n",
-    "----------------------------------Include\n",
+    "<Img src = \"Images/AF.jpg\">\n",
     "\n",
     "\n",
     "While the activation function isn't interesting for a network that performs linear regression, it's useful for logistic regression and more complex networks. Here's a comparison of both representations of the same linear regression model:\n",
     "\n",
     "\n",
-    "\n"
+    "<Img src = \"Images/LinearAlg_NN2.jpg\">\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6\n",
+    "6.\n",
     "Because the inputs from one layer of neurons feed to the next layer of the single, output neuron, this is known as a **feedforward network**. In the language of graphs, a feedforward network is a **directed, acyclic graph.**\n",
     "\n",
     "**Fitting A Network**\n",
@@ -140,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
