--- a/Assignment3_Deep_Learning/Intro to Deep Learning.ipynb
+++ b/Assignment3_Deep_Learning/Intro to Deep Learning.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -268,10 +268,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x29965dee948>]"
+       "[<matplotlib.lines.Line2D at 0x299671572c8>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -856,11 +856,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As we increased the number of neurons in each layer, it looks like the accuracy increased all the way to 100%!"
+   ]
   },
   {
    "cell_type": "code",
