--- a/MiniProject2-NLP/NLP.ipynb
+++ b/MiniProject2-NLP/NLP.ipynb
@@ -1287,7 +1287,12 @@
     "## Word2Vec \n",
     "\n",
     "* In this model, each word is represented as a vector of 32 or more dimension instead of a single number\n",
-    "* Here the semantic information and relation between different words is also preserved\n"
+    "* Here the semantic information and relation between different words is also preserved\n",
+    "\n",
+    "<Img src=\"https://github.com/rhnyewale/INFO-7390-Advance-Data-Science-Architecture/blob/master/MiniProject2-NLP/Word2Vec.jpg?raw=true\">\n",
+    "\n",
+    "    \n",
+    "<Img src = >"
    ]
   },
   {
